# rpm2swidtag

./: Dockerfile  Makefile  pyproject.toml  rpm2swidtag.spec.template  setup.cfg
.github/workflows/: build-test.yaml
tests/: Dockerfile  build.sh
