[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rpm2swidtag"
version = "0.8.20"
authors = [{name = "Jan Pazdziora", email = "jpazdziora@redhat.com"}]
license = {text = "ASL 2.0"}
description = "Tools for producing SWID tags from rpm package headers and inspecting the SWID tags"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = ["rpm", "lxml"]

[tool.setuptools]
package-dir = {"" = "lib"}
# py-modules = ["dnf-plugins.swidtags"]
packages = ["rpm2swidtag", "swidq"]
script-files = [
    "bin/rpm2swidtag",
    "bin/dnf-plugin-swidtags-update-from-0.7",
    "bin/swidq",
]
include-package-data = false

[tool.setuptools.data-files]
"/etc/rpm2swidtag" = [
    "rpm2swidtag.conf",
    "swidtag-template.xml",
    "swidtag.xslt",
    "rpm2swidtag.xslt",
    "rpm2swidtag-tagid.xslt",
]
"/etc/rpm2swidtag/rpm2swidtag.conf.d" = [
    "rpm2swidtag.conf.d/fedora-rawhide.conf",
    "rpm2swidtag.conf.d/fedora-40.conf",
    "rpm2swidtag.conf.d/fedora-39.conf",
    "rpm2swidtag.conf.d/fedora-38.conf",
    "rpm2swidtag.conf.d/fedora-37.conf",
]
"/etc/swid" = ["swidq.conf"]
"/etc/swid/swidtags.d" = []
"/usr/share/swidq/stylesheets" = [
    "swidq-info.xslt",
    "swidq-dump.xslt",
    "swidq-files.xslt",
    "swidq-xml.xslt",
]
"/etc/dnf/plugins" = ["dnf/plugins/swidtags.conf"]
